# gnome-gmail

./: .gitignore  .travis.yml  50_gnome-gmail  AUTHORS  ChangeLog  INSTALL  MANIFEST.in  Makefile  Makefile.am  NEWS  README  README.md  aclocal.m4  archive.html  configure.ac  conftest.py  control  evolution  gnome-gmail  gnome-gmail-1.9.1.tar.gz.asc  gnome-gmail-1.9.2.tar.gz.asc  gnome-gmail-1.9.3.tar.gz.asc  gnome-gmail-1.9.4.tar.gz.asc  gnome-gmail-1.9.5.tar.gz.asc  gnome-gmail-1.9.tar.gz.asc  gnome-gmail-2.0.1.tar.gz.asc  gnome-gmail-2.0.tar.gz.asc  gnome-gmail-2.1.tar.gz.asc  gnome-gmail-2.2.tar.gz.asc  gnome-gmail-2.3.1.tar.gz.asc  gnome-gmail-2.3.tar.gz.asc  gnome-gmail-2.4.tar.gz.asc  gnome-gmail-2.5.1.tar.gz.asc  gnome-gmail-2.5.2.tar.gz.asc  gnome-gmail-2.5.3.tar.gz.asc  gnome-gmail-2.5.4.tar.gz.asc  gnome-gmail-2.5.5.tar.gz.asc  gnome-gmail-2.5.6.tar.gz.asc  gnome-gmail-2.5.tar.gz.asc  gnome-gmail-2.6.1.tar.gz.asc  (+46 more)
.tx/: config
deb/: checksums.txt  checksums.txt.asc  gnome-gmail_1.8.3-1_all.deb  gnome-gmail_1.9-1_all.deb  gnome-gmail_1.9-2_all.deb  gnome-gmail_1.9.1-1_all.deb  gnome-gmail_1.9.5-1_all.deb  gnome-gmail_1.9.5-2_all.deb  gnome-gmail_2.0-1_all.deb  gnome-gmail_2.0.1-1_all.deb  gnome-gmail_2.1-1_all.deb  gnome-gmail_2.2-1_all.deb  gnome-gmail_2.3-1_all.deb  gnome-gmail_2.3.1-2_all.deb  gnome-gmail_2.5.1-1_all.deb  gnome-gmail_2.5.2-1_all.deb  gnome-gmail_2.5.3-1_all.deb  gnome-gmail_2.5.4-2_all.deb  gnome-gmail_2.5.5-1_all.deb  gnome-gmail_2.5.6-1_all.deb  gnome-gmail_2.6-1_all.deb  gnome-gmail_2.6.1-1_all.deb  gnome-gmail_2.7-1_all.deb
debian/: changelog  clean  control  copyright  gbp.conf  install  links  manpages  postinst  postrm  prerm  pydist-overrides  rules  watch
debian/patches/: 0001-Default-to-GNOME.patch  0001-Mock-out-gtk-loop-in-test.patch  0002-Ok-if-I-can-t-verify-default-mailer.patch  0003-Skip-browser-test-if-no-GUI-environment.patch  disable_buggy_test  remove-setup-gi-dep  series  setup-modules.patch
debian/tests/: control  runtest2.7  runtest3
debian/upstream/: metadata  signing-key.asc
html/: index.html  mailtogen  piwik.html
icons/: ViaGee.xcf
imap/: imap.pl  imap.py  tw
m4/: ChangeLog
man/: gnome-gmail.html  makeman  setOOmailer.html
po/: .Makefile.swp  ChangeLog  LINGUAS  Makevars  POTFILES  POTFILES.in  cs.po  da.po  de.po  el.po  el_GR.po  es.po  et.po  fa.po  fi.po  fr.po  gnome-gmail.pot  hr.po  hu.po  hy.po  id.po  it.po  ja.po  ms.po  nl.po  pl.po  ps.po  pt.po  pt_BR.po  ro.po  ru.po  si.po  sr.po  sv.po  ta.po  ta_LK.po  tr.po  ug.po  uk.po  vi.po  (+3 more)
repo/: addit
repo/conf/: distributions  options
repo/dists/gnome-gmailppa/: InRelease  Release  Release.gpg
repo/dists/gnome-gmailppa/main/binary-amd64/: Packages  Release
repo/dists/gnome-gmailppa/main/binary-armel/: Packages  Release
repo/dists/gnome-gmailppa/main/binary-armhf/: Packages  Release
repo/dists/gnome-gmailppa/main/binary-i386/: Packages  Release
repo/pool/main/g/gnome-gmail/: gnome-gmail_1.9.2-1_all.deb  gnome-gmail_1.9.3-1_all.deb  gnome-gmail_1.9.4-1_all.deb  gnome-gmail_2.0-1_all.deb  gnome-gmail_2.0.1-2_all.deb  gnome-gmail_2.1-1+ppa1_all.deb  gnome-gmail_2.2-1+ppa1_all.deb  gnome-gmail_2.3-1+ppa1_all.deb  gnome-gmail_2.3.1-1_all.deb  gnome-gmail_2.4.1-1_all.deb  gnome-gmail_2.5-1_all.deb  gnome-gmail_2.5-2_all.deb  gnome-gmail_2.5.4-1_all.deb  gnome-gmail_2.5.4-3_all.deb
test/: conftest.py  test_body.py  test_browser.py  test_fixtures.py  test_ggm.py  test_gmailapi.py  test_gnome_gio.py  test_gnome_gtk.py  test_gnome_notify.py  test_gnome_secret.py  test_gnome_wnck.py  test_main.py  test_oauth.py  test_setup.py  testggm.py
