#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.67])
AC_INIT([gnome-gmail], [1.6.1], [BUG-REPORT-ADDRESS])
AM_INIT_AUTOMAKE
AC_COPYRIGHT([Copyright 2010 David Steele <daves@users.sourceforge.net>])

GNOME_INIT

AM_GNU_GETTEXT([external])

AM_GCONF_SOURCE_2
AC_PATH_PROG(GCONFTOOL,gconftool-2)

AC_PREFIX_DEFAULT([/usr])

# Checks for programs.
AC_PROG_INSTALL
AC_PROG_MAKE_SET

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile po/Makefile.in])
AC_OUTPUT
